Fixed the height of search type selector being too short at 320px viewport width and made it shorter on wider viewports

--- a/src/style.tw.css
+++ b/src/style.tw.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-    --default-font-family: 'IBM Plex Sans Arabic'
+    --default-font-family: 'IBM Plex Sans Arabic';
+    --breakpoint-xs: 33rem;
 }
 
 .panel {
